deploy/eks/argocd/base/tinder-app/match-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: match-service-app
  namespace: tinder-space
spec:
  replicas: 2
  selector:
    matchLabels:
      app: match-service-app
  template:
    metadata:
      labels:
        app: match-service-app
    spec:
      containers:
        - name: match-service-app
          image: match-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
