deploy/eks/argocd/base/tinder-app/match-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recommendation-service
  namespace: tinder-space
spec:
  type: ClusterIP
  selector:
    app: recommendation-service
  ports:
    - name: http
      protocol: TCP
      port: 8084
      targetPort: 8084
